Style fixes and button alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -328,3 +328,20 @@ h6 {
 .navbar {
   border-bottom: 1px solid black;
 }
+
+// Projects
+.slider-artemis {
+  background-color: $purple !important;
+}
+
+.slider-activemq5 {
+  background-color: $pink !important;
+}
+
+.slider-cms {
+  background-color: $blue !important;
+}
+
+.slider-nms {
+  background-color: $orange !important;
+}
